--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,8 +32,8 @@
               
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="{{ url_for('main.index') }}">Home <span class="sr-only">(current)</span></a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('main.index') }}">Home</span></a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ml-auto">
