--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -55,7 +55,7 @@
         {%- endblock navbar %}
 
         {% block content -%}
-            <div class="w-screen mt-4">
+            <div class="w-screen">
                 {% with messages = get_flashed_messages() %}
                 {% if messages %}
                     {% for message in messages %}
