--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -9,14 +9,32 @@
 
         <!-- Sidebar -->
         <div class="bg-light border-right" id="sidebar-wrapper">
-          <div class="sidebar-heading">Start Bootstrap </div>
+          <div class="sidebar-heading dropdown">
+            <a class="list-group-item-action dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Budget
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">New Budget</a>
+              <a class="dropdown-item" href="#">Open Budget</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Budget Settings</a>
+              <a class="dropdown-item" href="#">Manage Payees</a>
+              <a class="dropdown-item" href="#">Export Budget</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Profile</a>
+              <a class="dropdown-item" href="#">Log Out</a>
+            </div>
+          </div>
           <div class="list-group list-group-flush">
-            <a href="#" class="list-group-item list-group-item-action bg-light">Dashboard</a>
-            <a href="#" class="list-group-item list-group-item-action bg-light">Shortcuts</a>
-            <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
-            <a href="#" class="list-group-item list-group-item-action bg-light">Events</a>
-            <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
-            <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
+            <a href="#" class="list-group-item list-group-item-action bg-light">Budget</a>
+            <a href="#" class="list-group-item list-group-item-action bg-light">Accounts</a>
+            <a href="#" class="list-group-item list-group-item-action bg-light">Reports</a>
+            <a href="#budget-accordion" class="list-group-item list-group-item-action bg-light" data-toggle="collapse" data-parent="#sidebar-wrapper">Budget</a>
+            <div class="collapse show" id="budget-accordion">
+                <a href="#" class="list-group-item list-group-item-action bg-light" data-parent="#budget-accordion">Account 1</a>
+                <a href="#" class="list-group-item list-group-item-action bg-light" data-parent="#budget-accordion">Account 2</a>
+                <a href="#" class="list-group-item list-group-item-action bg-light" data-parent="#budget-accordion">Account 3</a>
+            </div>
           </div>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -26,32 +44,6 @@
     
           <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
             <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
-    
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-    
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown
-                  </a>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </div>
-                </li>
-              </ul>
-            </div>
           </nav>
     
           <div class="container-fluid">
@@ -68,12 +60,13 @@
 
 {% block scripts %}
     {{ super() }}
+
     <!-- Menu Toggle Script -->
     <script>
-        $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#wrapper").toggleClass("toggled");
-        });
+      $("#menu-toggle").click(function(e) {
+      e.preventDefault();
+      $("#wrapper").toggleClass("toggled");
+      });
     </script>
 {% endblock %}
     
