--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -10,10 +10,13 @@
         <!-- Sidebar -->
         <div class="bg-light border-right" id="sidebar-wrapper">
           <div class="sidebar-heading dropdown">
-            <a class="list-group-item-action dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Budget
+            <a class="d-flex justify-content-between align-items-center dropdown-toggle list-group-item-action" href="#" role="button" id="sidebar-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <dl class="mb-0">
+                <dt>Budget</dt>
+                <dd class="mb-0 small">Email</dd>
+              </dl>
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu" aria-labelledby="sidebar-dropdown">
               <a class="dropdown-item" href="#">New Budget</a>
               <a class="dropdown-item" href="#">Open Budget</a>
               <div class="dropdown-divider"></div>
