Switch to using bootstrap sidebar based off bootstap's example

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,9 +12,11 @@
         {%- endblock metas %}
 
         {%- block styles %}
-            <link rel="stylesheet" href="{{ url_for('static', filename='css/sidebar.css') }}">
             <!-- Bootstrap CSS -->
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+            
+            <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+            <link rel="stylesheet" href="{{ url_for('static', filename='css/sidebar.css') }}">
         {%- endblock styles %}
 
     {%- endblock head %}
@@ -75,7 +77,14 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+            <!-- DateTime JS Library -->
             {{ moment.include_moment() }}
+
+            <!-- Feather Icons -->
+            <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
+            <script>
+                feather.replace()
+            </script>
         {%- endblock scripts %}
 
     {%- endblock body %}
