--- a/app/static/css/sidebar.css
+++ b/app/static/css/sidebar.css
@@ -30,7 +30,7 @@
 }
 
 .sidebar .nav-link:hover .feather,
-.sidebar .nav-link:active .feather {
+.sidebar .nav-link.active .feather {
   color:inherit;
 }
 
