--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -63,6 +63,10 @@
                         </li>
                     </ul>
                     <hr/>
+                    <button type="button" class="btn btn-outline-secondary btn-sm rounded-pill mt-3 ml-3">
+                        <span data-feather="plus-circle"></span>
+                        Add Account
+                    </button>
                 </div>
             </nav>
 
