--- a/app/static/css/sidebar.css
+++ b/app/static/css/sidebar.css
@@ -26,12 +26,16 @@
 }
 
 .sidebar .nav-link.active {
-  color: #007bff;
+  color: #fff;
+  background-color: #6c757d;
 }
 
-.sidebar .nav-link:hover .feather,
-.sidebar .nav-link.active .feather {
+.sidebar .nav-link:hover .feather {
   color:inherit;
+}
+
+.sidebar .nav-link.active .feather {
+  color: #87cefa;
 }
 
 .sidebar-heading {
@@ -40,15 +44,19 @@
 }
 
 .sidebar .dropdown-menu {
-  min-width: 100%;
+  min-width: 75%;
+  margin-top: -3px;
 }
 
-.sidebar .collapse a:hover, 
-.sidebar .collapse a:focus {
+.sidebar .dropdown .btn:focus {
+  box-shadow: none;
+}
+
+.sidebar .nav-link:hover:not(.expander):not(.active) {
   background-color: #dae0e5;
 }
 
 .sidebar hr {
-  margin-top: .25rem;
-  margin-bottom: .25rem;
+  margin-top: 0;
+  margin-bottom: 0;
 }
