--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -9,14 +9,14 @@
         <div class="row">
             <nav class="col-md-2 d-none d-lg-block bg-light sidebar">
                 <div class="sidebar-sticky">
-                    <div class="dropdown mb-1">
-                        <button class="btn btn-secondary btn-block rounded-0 dropdown-toggle d-flex justify-content-between align-items-center" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <div class="dropdown">
+                        <button class="btn btn-block rounded-0 dropdown-toggle d-flex justify-content-between align-items-center" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <dl class="mb-0 text-left">
                                 <dt>{{ budget_name }}</dt>
                                 <dd class="mb-0 small">{{ email }}</dd>
                             </dl>
                         </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                             <a class="dropdown-item" href="#">New Budget</a>
                             <a class="dropdown-item" href="#">Open Budget</a>
                             <div class="dropdown-divider"></div>
