Add dynamic active bootstrap class to navbar links

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
+{% set active_page = "auth.login" %}
 
 {% block app_content %}
     <h1>Sign In</h1>
