--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,3 +1,5 @@
+{% set active_page = active_page|default('main.index') -%}
+
 {% block doc -%}
 <!doctype html>
 <html lang="en">
@@ -35,20 +37,20 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('main.index') }}">Home</span></a>
+                            <a class="nav-link {% if active_page == 'main.index' %} active {% endif %}" href="{{ url_for('main.index') }}">Home</span></a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ml-auto">
                         {% if current_user.is_anonymous %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
+                                <a class="nav-link {% if active_page == 'auth.login' %} active {% endif %}" href="{{ url_for('auth.login') }}">Login</a>
                             </li>
                         {% else %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('main.user', username=current_user.username) }}">Profile</a>
+                                <a class="nav-link {% if active_page == 'main.user' %} active {% endif %}" href="{{ url_for('main.user', username=current_user.username) }}">Profile</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+                                <a class="nav-link {% if active_page == 'auth.logout' %} active {% endif %}" href="{{ url_for('auth.logout') }}">Logout</a>
                             </li>
                         {% endif %}
                     </ul>
