--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set active_page = "main.index" %}
 
 {% block app_content %}
     <h1>Hi, {{ current_user.username }}!</h1>
