--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,18 +1,32 @@
 {% extends 'base.html' %}
-{% import 'bootstrap/wtf.html' as wtf %}
 {% set active_page = "auth.login" %}
 
+{% block navbar %}
+{# clear out upper navbar #}
+{% endblock %}
+
+{% block styles %}
+    {{ super() }}
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
+{% endblock %}
+
 {% block app_content %}
-    <h1>Sign In</h1>
-    <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
+    <form class="form-signin text-center">
+        {{ form.hidden_tag() }}
+        <img class="mb-4" src="{{ url_for('static', filename='img/logo.svg') }}" alt="" width="72" height="72">
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+
+        {{ form.username.label(class="sr-only") }}
+        {{ form.username(size=32, class="form-control", placeholder="Username") }}
+
+        {{ form.password.label(class="sr-only") }}
+        {{ form.password(size=32, class="form-control", placeholder="Password") }}
+
+        <div class="checkbox mb-3">
+            {{ form.remember_me() }} {{ form.remember_me.label }}
         </div>
-    </div>
-    <br>
-    <p>New User? <a href="{{ url_for('auth.register') }}">Click to Register!</a></p>
-    <p>
-        Forgot Your Password?
-        <a href="{{ url_for('auth.reset_password_request') }}">Click to Reset It</a>
-    </p>
+
+        {{ form.submit(class="btn btn-lg btn-primary btn-block") }}
+    </form>
 {% endblock %}
