Add svg icon as link rel icon

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -14,7 +14,7 @@
 {% block app_content %}
     <form class="form-signin text-center">
         {{ form.hidden_tag() }}
-        <img class="mb-4" src="{{ url_for('static', filename='img/logo.svg') }}" alt="" width="72" height="72">
+        <img class="mb-4" src="{{ url_for('static', filename='img/credit_cards.svg') }}" alt="" width="72" height="72">
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
 
         {{ form.username.label(class="sr-only") }}
