--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         {%- endblock metas %}
 
-        <link rel="icon" href="{{ url_for('static', filename='img/logo.svg') }}">
+        <link rel="icon" href="{{ url_for('static', filename='img/logo.png') }}">
         
         {%- block styles %}
             <!-- Bootstrap CSS -->
