--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -18,7 +18,8 @@ body {
   background-color: #f5f5f5;
 }
 
-.form-signin {
+.form-signin,
+.container-fluid {
   width: 100%;
   max-width: 330px;
   padding: 15px;
