Add post action to login form

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block app_content %}
-    <form class="form-signin text-center">
+    <form action="" method="post" class="form-signin text-center">
         {{ form.hidden_tag() }}
         <img class="mb-4" src="{{ url_for('static', filename='img/credit_cards.svg') }}" alt="" width="72" height="72">
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
