Add sr-only label to _formhelper fields if no labels

--- a/app/templates/_formhelpers.html
+++ b/app/templates/_formhelpers.html
@@ -10,6 +10,10 @@
             <label for="{{ field.id }}" class="form-control-label">
                 {{ field.label }}
             </label>
+        {% else %}
+            <label for="{{ field.id }}" class="sr-only form-control-label">
+                {{ field.label }}
+            </label>
         {% endif %}
         {% if field.errors %}
             {% set class_ = class_ + " form-control is-invalid" %}
