--- a/app/static/css/sidebar.css
+++ b/app/static/css/sidebar.css
@@ -5,7 +5,15 @@
   left: 0;
   padding: 0;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+  font-size: .875rem;
 }
+
+.sidebar .feather {
+  width: 16px;
+  height: 16px;
+  vertical-align: text-bottom;
+}
+
 
 .sidebar-sticky {
   position: -webkit-sticky;
