--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% block styles %}
+    {{ super() }}
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/sidebar.css') }}">
+{% endblock %}
+
 {% block navbar %}
 {# clear out upper navbar #}
 {% endblock %}
