--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -23,8 +23,7 @@ body {
   background-color: #f5f5f5;
 }
 
-.form-signin,
-.container-fluid {
+.form-signin {
   width: 100%;
   max-width: 420px;
   padding: 15px;
