--- a/app/templates/auth/reset_password.html
+++ b/app/templates/auth/reset_password.html
@@ -1,11 +1,18 @@
-{% extends "base.html" %}
-{% import 'bootstrap/wtf.html' as wtf %}
+{% extends 'base.html' %}
+{% from '_formhelpers.html' import quick_form %}
 
-{% block app_content %}
-    <h1>Reset Password</h1>
-    <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
-        </div>
-    </div>
+
+{% block navbar %}
+{# clear out upper navbar #}
+{% endblock %}
+
+{% block styles %}
+{{ super() }}
+
+<link rel="stylesheet" href="{{ url_for('static', filename='css/full_page_form.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/floating_labels.css') }}">
+{% endblock %}
+
+{% block content %}
+{{ quick_form(form, class_="form-full-page", form_banner=True, form_title="Reset Password") }}
 {% endblock %}
