--- a/app/templates/dashboard/base.html
+++ b/app/templates/dashboard/base.html
@@ -79,6 +79,7 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+                {% block dashboard_content %} {% endblock %}
             </main>
         </div>
     </div>
