--- a/app/templates/dashboard/base.html
+++ b/app/templates/dashboard/base.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set active_page = active_page|default('dashboard.budget') -%}
 
 {% block styles %}
     {{ super() }}
@@ -36,19 +37,19 @@
                     </div>
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">
+                            <a class="nav-link {% if active_page == 'dashboard.budget' %} active {% endif %}" href="#">
                                 <span data-feather="mail"></span>
                                 Budget <span class="sr-only">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link {% if active_page == 'dashboard.reports' %} active {% endif %}" href="#">
                                 <span data-feather="bar-chart-2"></span>
                                 Reports
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link {% if active_page == 'dashboard.accounts' %} active {% endif %}" href="#">
                                 <span data-feather="book-open"></span>
                                 All Accounts
                             </a>
