--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -1,4 +1,5 @@
-{% extends "dashboard/base.html" %}
+{% extends 'dashboard/base.html' %}
+{% set active_page = 'dashboard.budget' -%}
 
 {% block dashboard_content %}
     <h1>Hello, world!</h1>
