--- a/app/templates/dashboard/reports.html
+++ b/app/templates/dashboard/reports.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/base.html' %}
-{% set active_page = 'dashboard.budget' -%}
+{% set active_page = 'dashboard.reports' -%}
 
 {% block dashboard_content %}
-    <h1>Budget Page</h1>
+<h1>Reports Page</h1>
 {% endblock %}
