--- a/app/templates/dashboard/base.html
+++ b/app/templates/dashboard/base.html
@@ -49,7 +49,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if active_page == 'dashboard.accounts' %} active {% endif %}" href="#">
+                            <a class="nav-link {% if active_page == 'dashboard.accounts' %} active {% endif %}" href="{{ url_for('dashboard.accounts', username=user.username, budget_id=budget.id) }}">
                                 <span data-feather="book-open"></span>
                                 All Accounts
                             </a>
