Add url_value_preprocessor and url_defaults to dashboard blueprint
Since things like username and budget_id will be used heavily throughout the blueprint,
this essentially scrapes them out of the url the first time they are entered and saves them off into
g which can then be used for providing url defaults when calling url_for.

Still have to be careful and provide defaults for things like budget_id when not entered - such as the last
visited budget or the first budget a user created as a fallback.

--- a/app/templates/dashboard/base.html
+++ b/app/templates/dashboard/base.html
@@ -37,19 +37,19 @@
                     </div>
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link {% if active_page == 'dashboard.budget' %} active {% endif %}" href="{{ url_for('dashboard.budget', username=user.username, budget_id=budget.id) }}">
+                            <a class="nav-link {% if active_page == 'dashboard.budget' %} active {% endif %}" href="{{ url_for('dashboard.budget') }}">
                                 <span data-feather="mail"></span>
                                 Budget <span class="sr-only">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if active_page == 'dashboard.reports' %} active {% endif %}" href="{{ url_for('dashboard.reports', username=user.username, budget_id=budget.id) }}">
+                            <a class="nav-link {% if active_page == 'dashboard.reports' %} active {% endif %}" href="{{ url_for('dashboard.reports') }}">
                                 <span data-feather="bar-chart-2"></span>
                                 Reports
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if active_page == 'dashboard.accounts' %} active {% endif %}" href="{{ url_for('dashboard.accounts', username=user.username, budget_id=budget.id) }}">
+                            <a class="nav-link {% if active_page == 'dashboard.accounts' %} active {% endif %}" href="{{ url_for('dashboard.accounts') }}">
                                 <span data-feather="book-open"></span>
                                 All Accounts
                             </a>
