--- a/app/templates/dashboard/base.html
+++ b/app/templates/dashboard/base.html
@@ -11,7 +11,7 @@
 {# clear out upper navbar #}
 {% endblock %}
 
-{% block app_content %}
+{% block content %}
     <div class="container-fluid">
         <div class="row">
             <nav class="col-md-2 d-none d-lg-block bg-light sidebar">
@@ -80,6 +80,14 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        {% for message in messages %}
+                            <div class="alert alert-info" role="alert">{{ message }}</div>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+                
                 {% block dashboard_content %} {% endblock %}
             </main>
         </div>
