--- a/app/templates/dashboard/base.html
+++ b/app/templates/dashboard/base.html
@@ -14,6 +14,8 @@
 {% block content %}
     <div class="container-fluid">
         <div class="row">
+
+            <!-- Sidebar -->
             <nav class="col-md-2 d-none d-lg-block bg-light sidebar">
                 <div class="sidebar-sticky">
                     <div class="dropdown">
@@ -72,13 +74,14 @@
                         </li>
                     </ul>
                     <hr/>
-                    <button type="button" class="btn btn-outline-secondary btn-sm rounded-pill mt-3 ml-3">
+                    <button type="button" class="btn btn-outline-secondary btn-sm rounded-pill mt-3 ml-3" data-toggle="modal" data-target="#addAccountModal">
                         <span data-feather="plus-circle"></span>
                         Add Account
                     </button>
                 </div>
             </nav>
 
+            <!-- Dashboard Content -->
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
                 {% with messages = get_flashed_messages() %}
                     {% if messages %}
@@ -87,9 +90,32 @@
                         {% endfor %}
                     {% endif %}
                 {% endwith %}
-                
+
                 {% block dashboard_content %} {% endblock %}
             </main>
+
+            <!-- 'Add Account' modal  -->
+            <div class="modal fade" id="addAccountModal" tabindex="-1" role="dialog" aria-labelledby="addAccountModalTitle"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="addAccountModalTitle">Add Account</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            ...
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 {% endblock %}
